# Nibandha

./: .gitignore  .importlinter  README.md  pyproject.toml
.agent/: README.md
.agent/rules/: git-cleanliness.md  nibandha-config-enforcement.md  nibandha-core.md  nibandha-imports.md  nibandha-sentinel.md  testing-standards.md
.agent/skills/chatha/: SKILL.md
.agent/skills/clean-implementation/: SKILL.md
.agent/skills/doc-architect/: SKILL.md
.agent/skills/mayavi/: SKILL.md
.agent/skills/nibandha-manager/: SKILL.md
.agent/skills/quality-manager/: SKILL.md
.agent/skills/refactor-agent/: SKILL.md
.agent/skills/security-and-pitfalls/: SKILL.md
.agent/skills/test-scaffolder/: SKILL.md
.agent/skills/verification-manager/: SKILL.md
.agent_reports/assets/data/: unit.json
conf/: rotation_config.yaml
docs/Bugs/: BUG-001_E2E_Module_Attribution.md  BUG-002_Conclusion_Logic.md  BUG-003_Documentation_Path_Structure.md  BUG-004_doc_lookup_paths.md  BUG-005_unit_coverage_hardcoded.md
docs/CR/: CR-001_Code_Hygiene.md  CR-002-Log-Rotation.md  CR-002_Security_Scanning.md  CR-003_Duplication_Detection.md
docs/agent/: README.md
docs/agent/rules/: core-standards.md  nibandha-ddd-structure.md  nibandha-logging-standards.md  nibandha-manager-rules.md  nibandha-testing.md  testing-standards.md
docs/agent/skills/: quality-manager.md  test-scaffolder.md
docs/bugs/: README.md  handler_attachment_basicConfig.md  logger_timestamp_default.md
docs/features/reporting/: architecture.md
docs/issues/: report-generation-issues.md  windows-performance-investigation.md
docs/modules/: README.md  application-isolation.md  client-integration.md  configuration.md  log-rotation.md  logging.md  overview.md
docs/modules/configuration/: README.md
docs/modules/core/: README.md  configuration.md  rotation.md  unified_root.md
docs/modules/reporting/: README.md
docs/modules/unified_root/: README.md
docs/sandbox/: overview.md
docs/sandbox/modules/: configuration.md  unified_root.md  unified_root_ecosystem.md
docs/test/: README.md
docs/test/core/: e2e_test_scenarios.md  unit_test_scenarios.md
docs/test/logging/: e2e_test_scenarios.md  unit_test_scenarios.md
docs/test/reporting/: unit_test_scenarios.md
docs/test/templates/: e2e_report_template.md  overview_report_template.md  unified_overview_template.md  unit_report_template.md
docs/test/unified_root/: e2e_test_scenarios.md  unit_test_scenarios.md
scripts/: generate_test_report.py  generate_unified_report.py  run_sandbox.py  verify_ecosystem_demo.py  verify_full_system.py  verify_system.py
scripts/config/: demo_config.yaml
src/nikhil/nibandha/: __init__.py  core.py  py.typed
tests/: conftest.py  ping_archival.py  repro_archival.py  repro_export.py  test_bug_fixes.py  test_log_rotation.py
tests/e2e/configuration/: test_configuration_e2e.py
tests/e2e/core/: test_core_corner_cases.py  (+1 more)
tests/integration/: test_quality_reporters_cr.py
tests/sandbox/: conftest.py  reporter.py
(+364 files in other folders)
