[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Nibandha"
version = "1.0.4"
description = "Universal logger and storage module for Amsha, Pravaha, and beyond."
readme = "README.md"
dependencies = [
      "pydantic == 2.11.9",
      "PyYAML >= 6.0"
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-cov >= 4.0.0",
    "import-linter",
    "seaborn",
    "matplotlib",
    "pandas",
    "pytest-json-report"
]

reporting = [
    "seaborn",
    "matplotlib",
    "pandas",
    "jinja2",
    "pytest-json-report",
    "import-linter",
    "markdown2",
    "pygments",
    "pypandoc"
]

export = [
    "markdown2",
    "pygments",
    "pypandoc"
]


[tool.setuptools]
package-dir = { "" = "src/nikhil" }

[tool.setuptools.packages.find]
where = ["src/nikhil"]

[tool.setuptools.package-data]
nibandha = ["reporting/templates/*.md", "py.typed"]